--- a/src/salaries_science_frontend/src/index.html
+++ b/src/salaries_science_frontend/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>zon</title>
+    <title>salaries_science</title>
     <base href="/" />
     <link rel="icon" href="favicon.ico" />
     <link type="text/css" rel="stylesheet" href="main.css" />
